terraform/aws/modules/eks/eks-cluster.tf
#
# EKS Cluster Resources
#  * IAM Role to allow EKS service to manage other AWS services
#  * EC2 Security Group to allow networking traffic with EKS cluster
#  * EKS Cluster


resource "aws_security_group" "demo-cluster" {
  depends_on = [aws_vpc.demo]
  name        = "eks-demo-cluster-sg-${random_string.cluster.id}"
  description = "Cluster communication with worker nodes"
  vpc_id      = aws_vpc.demo.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "terraform-eks-demo"
  }
}

resource "aws_security_group_rule" "demo-cluster-ingress-workstation-https" {
  depends_on        = [aws_security_group.demo-cluster]
  cidr_blocks       = [local.workstation-external-cidr]
  description       = "Allow workstation to communicate with the cluster API Server"
  from_port         = 443
  protocol          = "tcp"
  security_group_id = aws_security_group.demo-cluster.id
  to_port           = 443
  type              = "ingress"
}

resource "aws_kms_key" "eks_secret_key" {
  description             = "KMS key for Kubernetes Secrets"
  deletion_window_in_days = 7
}

resource "aws_eks_cluster" "demo" {
  enabled_cluster_log_types = ["api", "audit","authenticator","controllerManager","scheduler"]
  name     = "${var.cluster-name}-${random_string.cluster.id}"
  role_arn = aws_iam_role.cluster.arn

  vpc_config {
    security_group_ids = [aws_security_group.demo-cluster.id]
    subnet_ids         = aws_subnet.demo[*].id
  }

  encryption_config {
    provider {
      key_arn = aws_kms_key.eks_secret_key.arn
    }
    resources = ["secrets"]
  }

  depends_on = [
    aws_internet_gateway.demo,
    aws_security_group.demo-cluster,
    aws_iam_role_policy_attachment.cluster-AmazonEKSClusterPolicy,
    aws_iam_role_policy_attachment.cluster-AmazonEKSVPCResourceController,
    aws_iam_role_policy_attachment.cluster-AmazonVPCFullAccess,
  ]
}
